Implemented basic functionality for categoryOption and category de-duplication

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/olavpo/dhis2-metadata-deduplicator#readme",
   "dependencies": {
     "inquirer": "^6.2.1",
-    "npm": "^6.5.0"
+    "npm": "^6.5.0",
+    "q": "git+https://github.com/kriskowal/q.git",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.11.0"
