Modified selection of categoryOption - listed in script rather than by copy/paste of uids

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/olavpo/dhis2-metadata-deduplicator#readme",
   "dependencies": {
     "inquirer": "^6.2.1",
+    "inquirer-search-checkbox": "^1.0.0",
     "npm": "^6.5.0",
     "q": "git+https://github.com/kriskowal/q.git",
     "request": "^2.88.0"
